[package]
name = "dammsugare"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "*", features = ["json"] }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.6.1"
serde_json = "*"
